tooling/nargo_cli/tests/snapshots/execution_failure/ref_to_ref_in_array_failing_assert/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed constraint
   ┌─ src/main.nr:15:5
   │
15 │     assert(*(arr[0].0) == y);
   │     ------------------------
   │
   = Call stack:
     1: main
             at src/main.nr:15:5

Failed to solve program: 'Cannot satisfy constraint'
